# polytech-study

./: .gitignore  README.md
computer_graphics/lab1/task1_2/: main.py  pyproject.toml
computer_graphics/lab1/task1_2/config/: settings.py
computer_graphics/lab1/task1_2/core/: core_settings.py  display.py  display_figure.py  reshape.py  timer.py
computer_graphics/lab1/task1_2/figures/: figure_settings.py  sphere.py  teapot.py
computer_graphics/lab3/: main.py  pyproject.toml
computer_graphics/lab3/config/: animate_settings.py  settings.py
computer_graphics/lab3/core/: animation.py  camera.py  display.py  keys_handler.py  load_texture.py
computer_graphics/lab3/figures/: big_cube.py  small_cube.py
database_sql/lab3_2/: pyproject.toml  script.py  stat_script.py
database_sql/lab3_2/core/: parse.py
system_analysis_and_decision_making/courseWork/decision_support_system/: pyproject.toml
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/: main.py
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/core/: __init__.py  read_data.py  summary.py  write_data.py
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/core/mechanisms/: __init__.py  binary_relation_calc.py  dominance_mechanism.py  k_max_mechanism.py  k_max_optimal_mechanism.py  locking_mechanism.py  tournament_mechanism.py
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/input_data/: feature_names_for_matrix_rows.csv
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/input_data/my_data_for_course_work/: feature_names_for_matrix_rows.csv  weight_coefficients.csv
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/input_data/test_data/: matrix.csv
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/models/: __init__.py  binary_relation.py  dominance.py  k_max.py  lock.py  raw_data.py  summary.py  tournament.py
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/output_data/: Итоговый_отчет.txt
system_analysis_and_decision_making/courseWork/decision_support_system/decision_support_system/output_data/information_by_preference/: Z-спред.txt  Год_выпуска.txt  Пробег.txt  (+7 more)
(+1141 files in other folders)
