[tool.poetry]
name = "task1"
version = "0.1.0"
description = ""
authors = ["Vitaly Kopylov <workflow.elec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyopengl = "^3.1.6"
pyopengl-accelerate = "^3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
