[tool.poetry]
name = "Decision support system"
version = "1.0.0"
description = ""
authors = ["Vitaly Kopylov <workflow.elec@gmail.com>"]
readme = "README.md"
packages = [{include = "decision_support_system"}]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.6.0"

[tool.poetry.scripts]
run = "decision_support_system.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
